examples/type_system/failing/61_strict_generic_unresolved_boundary.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/61_strict_generic_unresolved_boundary.flx
// error[E425]: Unresolved Boundary Type
//
// Strict mode cannot enforce runtime boundary check for unresolved expression type in function return expression.
//
//   examples/type_system/failing/61_strict_generic_unresolved_boundary.flx:24:5
//    |
// 24 |     x
//    |     ^
//    |     - expression type is unresolved in strict mode
//
// Hint:
//   Use concrete types (or additional annotations) so HM can resolve this expression.
// parity-expected-stderr-end
// parity: vm_strict, llvm_strict
// expect: compile_error
// expect-error: E425

// E425: strict mode rejects unresolved generic runtime boundary checks.
public fn id<T>(x: T) -> T {
    x
}

fn main() -> Unit {
    let _ = id(1)
}
